--- a/Proyecto1Compiladores1/src/main/java/vista/Principal.form
+++ b/Proyecto1Compiladores1/src/main/java/vista/Principal.form
@@ -144,6 +144,7 @@
                   <Font name="Consolas" size="14" style="0"/>
                 </Property>
                 <Property name="rows" type="int" value="5"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
             </Component>
           </SubComponents>
